@@ -6,7 +6,7 @@ Name:		globus-gridftp-server
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	12.18
+Version:	12.19
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - Globus GridFTP Server
@@ -242,6 +242,10 @@ fi
 %{_libdir}/pkgconfig/*.pc
 
 %changelog
+* Fri Jun 07 2019 Globus Toolkit <support@globus.org> - 12.19-1
+- Add support for supported checksum advertising
+- Add support for SHA1, SHA256, SHA512 to POSIX DSI
+
 * Mon Jun 03 2019 Globus Toolkit <support@globus.org> - 12.18-1
 - add simple checksum read throttling
 
