@@ -1,3 +1,10 @@
+globus-gridftp-server (12.19-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add support for supported checksum advertising
+  * Add support for SHA1, SHA256, SHA512 to POSIX DSI
+
+ -- Globus Toolkit <support@globus.org>  Fri, 07 Jun 2019 13:06:34 -0500
+
 globus-gridftp-server (12.18-1+gt6.@distro@) @distro@; urgency=low
 
   * add simple checksum read throttling
